[package]
name = "cron"
version = "0.12.1"
authors = ["Zack Slayton <zack.slayton@gmail.com>"]
repository = "https://github.com/zslayton/cron"
documentation = "https://docs.rs/cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer."
keywords = [ "cron", "schedule", "repeat", "periodic", "time" ]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "cron"

[dependencies]
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
nom = "~7"
once_cell = "1.10"

[dev-dependencies]
chrono-tz = "~0.6"
