[package]
name = "cron"
version = "0.15.0"
authors = ["Zack Slayton <zack.slayton@gmail.com>"]
repository = "https://github.com/zslayton/cron"
documentation = "https://docs.rs/cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer."
keywords = [ "cron", "schedule", "repeat", "periodic", "time" ]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "cron"

[dependencies]
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
winnow = "0.6.20"
once_cell = "1.10"
serde = {version = "1.0.164", optional = true }

[dev-dependencies]
chrono-tz = "~0.6"
serde_test = "1.0.164"

# Dev-dependency for feature "serde".
# Optional dev-dependencies are not supported yet.
# Cargo feature request is available at https://github.com/rust-lang/cargo/issues/1596
postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }

[features]
serde = ["dep:serde"]
