[package]
name = "jiff-cron"
version = "0.1.1"
authors = [
    "Leonie Philine Bitto <bitto@posteo.de>",
    "Max Countryman <hello@maxcountryman.com>",
    "Zack Slayton <zack.slayton@gmail.com>",
]
repository = "https://github.com/jiff-cron/jiff-cron"
documentation = "https://docs.rs/jiff-cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer built with jiff."
keywords = ["cron", "schedule", "repeat", "periodic", "time"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
jiff = "0.2"
serde = {version = "1", optional = true }
winnow = "0.7"

[dev-dependencies]
serde_test = "1"

# Dev-dependency for feature "serde".
# Optional dev-dependencies are not supported yet.
# Cargo feature request is available at https://github.com/rust-lang/cargo/issues/1596
postcard = { version = "1", default-features = false, features = ["use-std"] }

[features]
serde = ["dep:serde"]
